<resources>
    <string name="app_name">English-Russian Flashcards</string>
    <string name="settings_button_text">Settings</string>
    <string name="button_1_name">button1</string>
    <string name="button_2_name">button2</string>
    <string name="button_3_name">button3</string>
    <string name="button_4_name">button4</string>
    <string name="cards_button_name">Cards</string>
    <string name="continue_button_name">Continue</string>
    <string name="new_button_name">New</string>
    <string name="history_button_name">History</string>
    <string name="quit_button_name">Quit</string>
    <string name="default_word_group_name">Fruit</string>
    <string name="default_word_count">0</string>
    <string name="default_english_word">Word</string>
    <string name="default_transcription">[transcription]</string>
    <string name="word_image_content_description">Word illustration</string>
    <string name="default_russian_word">слово</string>
    <string name="default_english_example">Default english example</string>
    <string name="default_russian_translation">перевод слова</string>
    <string name="sort_button_text">sort</string>
    <string name="learn_button_text">learn</string>
    <string name="card_creation_button_text">create</string>
    <string name="text_typing_hint">type a word</string>
    <string name="translation_selection_hint">choose a translation</string>
    <string name="english_example_selection_hint">choose english example</string>
    <string name="image_selection_hint">choose an image</string>
    <string name="group_selection_hint">type a group</string>
    <string name="add_group_button_text">+ Add</string>
    <string name="default_date">dd.mm.yyyy</string>
    <string name="group_remove_button_text">remove</string>
    <string name="group_add_button_text">add group</string>
    <string name="default_typing_char_sequence">ab</string>
    <string name="user_char_sequence_typed">ab</string>
    <string name="card_date_format_pattern">\"d.MM.uuuu\"</string>
    <string name="planet_group_name">Planets</string>
    <string name="fruit_group_name">Fruits</string>
    <string name="apple_card_word">apple</string>
    <string name="apple_card_translation">яблоко</string>
    <string name="apple_card_transcription">[ˈæpəl]</string>
    <string name="earth_card_word">Earth</string>
    <string name="earth_card_translation">Земля</string>
    <string name="earth_card_transcription">[ˈɝːθ]</string>
    <string name="card_groups_button_text">Cards</string>
    <string name="card_layout_parent_view_name">MaterialCardView</string>
</resources>