<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <AutoCompleteTextView
        android:id="@+id/word_typing_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/word_typing_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/translation_selection_text_view" />

    <AutoCompleteTextView
        android:id="@+id/translation_selection_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/translation_selection_hint"
        app:layout_constraintTop_toBottomOf="@id/word_typing_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/english_example_selection_text_view" />

    <AutoCompleteTextView
        android:id="@+id/english_example_selection_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/english_example_selection_hint"
        app:layout_constraintTop_toBottomOf="@id/translation_selection_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_views_parent" />

    <LinearLayout
        android:id="@+id/image_views_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/english_example_selection_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/group_selection_text_view">

        <AutoCompleteTextView
            android:id="@+id/image_selection_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/image_selection_hint"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/word_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/default_word_image"
            android:adjustViewBounds="true"
            android:contentDescription="@string/word_image_content_description"
            android:layout_weight="3"/>
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/group_selection_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/group_selection_hint"
        app:layout_constraintTop_toBottomOf="@id/image_views_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_button_parent" />

    <LinearLayout
        android:id="@+id/create_button_parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/group_selection_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/card_creation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginEnd="@dimen/card_creation_button_end_margin"
            android:text="@string/card_creation_button_text"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>