<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/group_element_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/word_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_english_word"/>

            <TextView
                android:id="@+id/translation_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_russian_translation"/>

            <TextView
                android:id="@+id/example_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_english_example"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/word_image_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>