<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_back_side_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardBackgroundColor="#F1DDCE">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <ImageView
                    android:id="@+id/word_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/default_word_image"
                    android:background="@drawable/word_image_view_stroke"
                    android:contentDescription="@string/word_image_content_description"
                    android:padding="@dimen/word_image_view_padding"
                    android:adjustViewBounds="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="2:1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/english_word_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/default_english_word"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/russian_word_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/default_russian_word"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/english_example_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/default_english_example"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>